--- a/support-frontend/assets/pages/weekly-subscription-landing/components/hero/weeklyCampaign.scss
+++ b/support-frontend/assets/pages/weekly-subscription-landing/components/hero/weeklyCampaign.scss
@@ -65,7 +65,7 @@
 
     @include mq($until: mobileMedium) {
       h2 {
-        font-size: 28px;
+        font-size: 22px;
       }
     }
   }
